@@ -101,6 +101,11 @@ namespace libtorrent
 		free_upload_amount = 4 * 16 * 1024
 	};
 
+	// calculate the priority of a peer based on its address. One of the
+	// endpoint should be our own. The priority is symmetric, so it doesn't
+	// matter which is which
+	TORRENT_EXTRA_EXPORT boost::uint32_t peer_priority(tcp::endpoint e1, tcp::endpoint e2);
+
 	void request_a_block(torrent& t, peer_connection& c);
 
 	class TORRENT_EXTRA_EXPORT policy
@@ -172,6 +177,8 @@ namespace libtorrent
 
 			size_type total_download() const;
 			size_type total_upload() const;
+			
+			boost::uint32_t rank(tcp::endpoint const& external) const;
 
 			libtorrent::address address() const;
 			char const* dest() const;
@@ -197,6 +204,11 @@ namespace libtorrent
 			// if the peer is connected now, this
 			// will refer to a valid peer_connection
 			peer_connection* connection;
+
+			// as computed by hashing our IP with the remote
+			// IP of this peer
+			// calculated lazily
+			mutable boost::uint32_t peer_rank;
 
 #ifndef TORRENT_DISABLE_GEO_IP
 #ifdef TORRENT_DEBUG
@@ -430,7 +442,7 @@ namespace libtorrent
 
 		bool compare_peer_erase(policy::peer const& lhs, policy::peer const& rhs) const;
 		bool compare_peer(policy::peer const& lhs, policy::peer const& rhs
-			, address const& external_ip) const;
+			, tcp::endpoint const& external_ip) const;
 
 		iterator find_connect_candidate(int session_time);
 
